Addiction Card View

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="places-divider"></div>
             <div class="places-grid">
                 <!-- French Cathedrals -->
-                <div class="place-item">
+                <div class="place-item hobby-clickable" data-hobby="places">
                     <div class="place-image place-cathedral-1">
                     </div>
                     <div class="place-content">
@@ -261,7 +261,7 @@
                         <p class="place-description">The iconic Gothic cathedral in the heart of Paris, a masterpiece of French architecture and history.</p>
                     </div>
                 </div>
-                <div class="place-item">
+                <div class="place-item hobby-clickable" data-hobby="places">
                     <div class="place-image place-cathedral-2">
                     </div>
                     <div class="place-content">
@@ -269,7 +269,7 @@
                         <p class="place-description">A magnificent example of French Gothic architecture, renowned for its stunning stained glass windows.</p>
                     </div>
                 </div>
-                <div class="place-item">
+                <div class="place-item hobby-clickable" data-hobby="places">
                     <div class="place-image place-cathedral-3">
                     </div>
                     <div class="place-content">
@@ -277,7 +277,7 @@
                         <p class="place-description">The largest Gothic cathedral in France, celebrated for its impressive height and architectural grandeur.</p>
                     </div>
                 </div>
-                <div class="place-item">
+                <div class="place-item hobby-clickable" data-hobby="places">
                     <div class="place-image place-cathedral-4">
                     </div>
                     <div class="place-content">
@@ -285,7 +285,7 @@
                         <p class="place-description">The coronation cathedral of France, where most French kings were crowned, a symbol of royal power.</p>
                     </div>
                 </div>
-                <div class="place-item">
+                <div class="place-item hobby-clickable" data-hobby="places">
                     <div class="place-image place-cathedral-5">
                     </div>
                     <div class="place-content">
@@ -293,7 +293,7 @@
                         <p class="place-description">A stunning example of Gothic architecture in Alsace, famous for its intricate facade and astronomical clock.</p>
                     </div>
                 </div>
-                <div class="place-item">
+                <div class="place-item hobby-clickable" data-hobby="places">
                     <div class="place-image place-cathedral-6">
                     </div>
                     <div class="place-content">
